--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Binaries
 cmd/shortener/main
 cmd/shortener/shortener
+cmd/shortener/sh
 
 # Dependency directories (remove the comment below to include it)
 vendor/
